Bug 413424 - PNG encoder leaks a string. r=stuart, a1.9=schrep, guilty=dolske